Bug tracker at http://code.google.com/p/psutil/issues


1.0.0 - XXXX-XX-XX
------------------

NEW FEATURES

 * Issue 216: (UNIX) get_connections() UNIX sockets support.
 * Issue 220: (BSD) get_connections() has been rewritten in C and no longer
   requires lsof.
 * Issue 222: (OSX) add support for process cwd.
 * Issue 295: (OSX) process executable path is now determined by asking the OS
   instead of being guessed from process cmdline.
 * Issue 297: (OSX) the Process methods below were always raising AccessDenied
   for any process except the current one. Now this is no longer true. Also they
   are 2.5x faster.
    - get_memory_info()
    - get_memory_percent()
    - get_cpu_times()
    - get_cpu_percent()
    - get_num_threads()
 * Issue 300: examples/pmap.py script.

BUGFIXES

 * Issue 298: (OSX - BSD) memory leak in get_num_fds().
 * Issue 299: potential memory leak every time PyList_New(0) is used.


0.5.1 - 2012-06-29
------------------

NEW FEATURES

 * Issue 293: (Windows) process executable path is now determined by asking the
   OS instead of being guessed from process cmdline.

BUGFIXES

 * Issue 292: (Linux) race condition in process files/threads/connections.
 * Issue 294: (Windows) Process CPU affinity is only able to set CPU #0.


0.5.0 - 2012-06-27
------------------

NEW FEATURES

 * Issue #195: (Windows) number of handles opened by process.
 * Issue #209: psutil.disk_partitions() now provides also mount options.
 * Issue #229: list users currently connected on the system (psutil.get_users()).
 * Issue #238: (Linux, Windows) process CPU affinity (get and set).
 * Issue #242: Process.get_children(recursive=True): return all process
   descendants.
 * Issue #245: (POSIX) Process.wait() incrementally consumes less CPU cycles.
 * Issue #257: (Windows) removed Windows 2000 support.
 * Issue #258: (Linux) Process.get_memory_info() is now 0.5x faster.
 * Issue #260: process's mapped memory regions. (Windows patch by wj32.64, OSX